--- a/anfisa_for_friends/templates/includes/header.html
+++ b/anfisa_for_friends/templates/includes/header.html
@@ -28,15 +28,17 @@
             </a> 
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if view_name == 'about:about' %}active{% endif %}" href="{% url 'about:description' %}">
+            <a class="nav-link {% if view_name == 'about:description' %}active{% endif %}" href="{% url 'about:description' %}">
               О проекте
             </a> 
           </li>
         </ul>
       </div> 
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="{% url 'homepage:index' %}">
         <img src="{% static 'img/logo.png' %}" height="50" alt="" class="d-inline-block align-top">            
       </a>         
     </div>
   </nav>
 </header>
+
+{% endwith %} 
